--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="navbar">
     <div class="brand">
       <img src="logo.png" alt="Academic Link Institute logo">
-      <h1>Academic Link Institute</h1>
+     <img src="academic-link-logo.jpg" alt="Academic Link Institute logo"> <h1>Academic Link Institute</h1>
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -31,7 +31,16 @@
   <p><strong>Hindi medium students are welcome – concept clarity par special focus.</strong></p>
   <a href="tel:+917357970676" class="btn-primary">Call / WhatsApp: +91 7357 970 676</a>
 </section>
-
+<section class="container">
+  <h2 class="section-title">Learning at Academic Link</h2>
+  <div class="grid gallery">
+    <img src="IMG_20251221_232824.jpg" alt="Student studying with guidance at Academic Link">
+    <img src="IMG_20251221_231911.jpg" alt="Children doing homework together at home tuition">
+    <img src="IMG_20251221_231713.jpg" alt="Student practising maths and writing">
+    <img src="IMG_20251220_162506.jpg" alt="Small group tuition with notebooks on table">
+    <img src="Screenshot_2025-12-20-16-05-56-772_com.miui.gallery.jpg" alt="Young students focusing on classwork">
+  </div>
+</section>
 <section class="container">
   <h2 class="section-title">Why Academic Link?</h2>
   <div class="grid">
