Refactor index.html to streamline content and add sections
Removed duplicate sections and added new content for home and online tuitions, as well as a spoken English course.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="navbar">
     <div class="brand">
       <img src="logo.png" alt="Academic Link Institute logo">
-     <img src="academic-link-logo.jpg" alt="Academic Link Institute logo"> <h1>Academic Link Institute</h1>
+      <h1>Academic Link Institute</h1>
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -29,28 +29,13 @@
   <h2>Unlock Your Child’s Potential</h2>
   <p>Small‑batch tuition for Classes 1–10 (CBSE · RBSE · ICSE · Cambridge), home tuitions in Raja Park and a dedicated 3‑month online Spoken English course for students, homemakers and professionals.</p>
   <p><strong>Hindi medium students are welcome – concept clarity par special focus.</strong></p>
+
+  <!-- small main image in hero -->
+  <img src="IMG_20251221_232824.jpg" alt="Student getting personal guidance at Academic Link" class="hero-photo">
+
   <a href="tel:+917357970676" class="btn-primary">Call / WhatsApp: +91 7357 970 676</a>
 </section>
-<section class="container">
-  <h2 class="section-title">Learning at Academic Link</h2>
-  <div class="grid gallery">
-    <img src="IMG_20251221_232824.jpg" alt="Student studying with guidance at Academic Link">
-    <img src="IMG_20251221_231911.jpg" alt="Children doing homework together at home tuition">
-    <img src="IMG_20251221_231713.jpg" alt="Student practising maths and writing">
-    <img src="IMG_20251220_162506.jpg" alt="Small group tuition with notebooks on table">
-    <img src="Screenshot_2025-12-20-16-05-56-772_com.miui.gallery.jpg" alt="Young students focusing on classwork">
-  </div>
-</section>
-  <section class="container">
-  <h2 class="section-title">Learning at Academic Link</h2>
-  <div class="grid gallery">
-    <img src="IMG_20251221_232824.jpg" alt="Student studying with guidance at Academic Link">
-    <img src="IMG_20251221_231911.jpg" alt="Children doing homework together at home tuition">
-    <img src="IMG_20251221_231713.jpg" alt="Student practising maths and writing">
-    <img src="IMG_20251220_162506.jpg" alt="Small group tuition with notebooks on table">
-    <img src="Screenshot_2025-12-20-16-05-56-772_com.miui.gallery.jpg" alt="Young students focusing on classwork">
-  </div>
-</section>
+
 <section class="container">
   <h2 class="section-title">Why Academic Link?</h2>
   <div class="grid">
@@ -63,3 +48,37 @@
       <p>Each group has around three students so every child gets personal attention, regular doubt clearing and close progress tracking.</p>
     </div>
     <div class="card">
+      <h3>Home & Online Tuitions</h3>
+      <p>Flexible options: learn at the institute, at home in Raja Park and nearby areas, or online from anywhere with structured notes.</p>
+    </div>
+    <div class="card">
+      <h3>Spoken English Confidence</h3>
+      <p>Three‑month online course to improve vocabulary, grammar basics and daily conversation skills for school and life.</p>
+    </div>
+  </div>
+</section>
+
+<section class="container">
+  <h2 class="section-title">Learning at Academic Link</h2>
+  <div class="grid gallery">
+    <img src="IMG_20251221_231911.jpg" alt="Children doing homework together at home tuition">
+    <img src="IMG_20251221_231713.jpg" alt="Student practising maths and writing">
+    <img src="IMG_20251220_162506.jpg" alt="Small group tuition with notebooks on table">
+    <img src="Screenshot_2025-12-20-16-05-56-772_com.miui.gallery.jpg" alt="Young students focusing on classwork">
+  </div>
+</section>
+
+<section class="container">
+  <h2 class="section-title">Quick Snapshot</h2>
+  <p class="lead"><strong>Location:</strong> Raja Park, Jaipur · <strong>Teacher:</strong> Pujita Ahuja (MA, B.Ed · 7+ years experience)</p>
+  <p class="lead">Weak‑students support, regular tests, parent feedback and a comfortable environment for children.</p>
+  <p class="lead">For detailed fee structure, see our <a href="classes-fees.html">Classes & Fees page</a>.</p>
+  <a href="classes-fees.html" class="btn-primary">View Classes & Fees</a>
+</section>
+
+<footer>
+  Academic Link Institute – Empowering Minds · Raja Park, Jaipur · +91 7357 970 676
+</footer>
+
+</body>
+</html>
