Add image to About Academic Link Institute section
Added an image to enhance the About section.

--- a/about.html
+++ b/about.html
@@ -30,6 +30,8 @@
   <p class="lead">Academic Link Institute is a friendly neighbourhood coaching centre in Raja Park, Jaipur, focused on strong concepts and confidence for school students up to Class 10.</p>
   <p class="lead">The institute offers tuition for all subjects and boards, with extra care for weak students and those shifting from Hindi to English medium.</p>
 
+  <img src="IMG_20251221_231713.jpg" alt="Students studying at Academic Link Institute" class="about-photo">
+
   <div class="grid" style="margin-top:20px;">
     <div class="card">
       <h3>About Pujita Ahuja</h3>
