Add link to Spoken English page in fees section

--- a/Classes-fees.html
+++ b/Classes-fees.html
@@ -89,6 +89,7 @@
   </table>
 
   <p class="lead" style="margin-top:15px;">For exact fee for your child’s class and subjects, please call or send a WhatsApp message.</p>
+  <p class="lead">Want to improve English speaking? Visit our <a href="spoken-english.html">Spoken English page</a>.</p>
   <a href="tel:+917357970676" class="btn-primary">Call for Fee Enquiry</a>
 </section>
 
