--- a/Classes-fees.html
+++ b/Classes-fees.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+      <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <header>
   <div class="navbar">
     <div class="brand">
-      <img src="logo.png" alt="Academic Link Institute logo">
+      <img src="IMG_20251223_194332.jpg" alt="Academic Link Institute logo">
       <h1>Academic Link Institute</h1>
     </div>
     <nav class="nav-links">
