Add periods to list items in Spoken-English.html
Updated sentences to include periods for consistency.

--- a/Spoken-English.html
+++ b/Spoken-English.html
@@ -11,7 +11,7 @@
 <header>
   <div class="navbar">
     <div class="brand">
-      <img src="logo.png" alt="Academic Link Institute logo">
+      <img src="IMG_20251223_194332.jpg" alt="Academic Link Institute logo">
       <h1>Academic Link Institute</h1>
     </div>
     <nav class="nav-links">
@@ -33,20 +33,21 @@
   <div class="grid" style="margin-top:20px;">
     <div class="card">
       <h3>What You Learn</h3>
-      <p>• Everyday vocabulary and sentence making</p>
-      <p>• Tense and grammar basics explained in simple language</p>
-      <p>• Conversation practice, role plays and introductions</p>
-      <p>• Confidence building for school, college and interviews</p>
+      <p>• Everyday vocabulary and sentence making.</p>
+      <p>• Tense and grammar basics explained in simple language.</p>
+      <p>• Conversation practice, role plays and introductions.</p>
+      <p>• Confidence building for school, college and interviews.</p>
     </div>
     <div class="card">
       <h3>Course Structure</h3>
-      <p>• Duration: 3 months</p>
-      <p>• Mode: Online (live classes)</p>
-      <p>• Timing: 1 hour · Alternate days</p>
-      <p>• Fee: ₹6,000 per month</p>
+      <p>• Duration: 3 months.</p>
+      <p>• Mode: Online (live classes).</p>
+      <p>• Timing: 1 hour · Alternate days.</p>
+      <p>• Fee: ₹6,000 per month.</p>
     </div>
   </div>
 
+  <p class="lead" style="margin-top:18px;">For school subject tuition, please see our <a href="classes-fees.html">Classes & Fees</a> or <a href="contact.html">contact us</a> directly.</p>
   <a href="tel:+917357970676" class="btn-primary">Book a Demo Class</a>
 </section>
 
