Revise feedback message in Testimonials.html
Updated testimonial feedback message for clarity.

--- a/Testimonials.html
+++ b/Testimonials.html
@@ -11,7 +11,7 @@
 <header>
   <div class="navbar">
     <div class="brand">
-      <img src="logo.png" alt="Academic Link Institute logo">
+      <img src="IMG_20251223_194332.jpg" alt="Academic Link Institute logo">
       <h1>Academic Link Institute</h1>
     </div>
     <nav class="nav-links">
@@ -41,7 +41,7 @@
       <p>“I am a homemaker and joined the online spoken English classes. In three months I became comfortable speaking to teachers and relatives in English.”</p>
     </div>
   </div>
-  <p class="lead" style="margin-top:18px;">*You can share your own real feedback later and these lines can be changed anytime.</p>
+  <p class="lead" style="margin-top:18px;">*You can share real feedback later and these lines can be updated anytime.</p>
 </section>
 
 <footer>
