Update image source and alt text in about.html

--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
     </div>
 
     <div class="about-image">
-      <img src="teacher.jpg" alt="Experienced Teacher at Academic Link">
+      <img src="IMG_20251220_162506.jpg" alt="Student studying with full focus and personal attention at Academic Link">
     </div>
   </div>
 </section>
